# windfall

./: .gitignore  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json
.aptos/: config.yaml
apps/backend/: Cargo.toml  windfall.db
apps/backend/jockey-img/: backend_02-05-25.md
apps/backend/migrations/: 20240101000000_initial.sql  20240206000000_add_missing_columns.sql  20240322000000_add_sync_fields.sql  20240322000000_setup_db.sql
apps/backend/scripts/: init_db.sh  setup_db.sh
apps/backend/src/: client.rs  config.rs  error.rs  lib.rs  main.rs
apps/backend/src/api/: account.rs  events.rs  mod.rs
apps/backend/src/api/handlers/: accounts.rs
apps/backend/src/api/middleware/: auth.rs
apps/backend/src/api/routes/: assets.rs  funds.rs  members.rs  messages.rs  mod.rs  proposals.rs  transactions.rs
apps/backend/src/db/: connection.rs  mod.rs  operations.rs  schema.rs  types.rs
apps/backend/src/db/migrations/: 01_initial.sql  20240321000000_initial.sql
apps/backend/src/sync/: mod.rs
apps/backend/src/utils/: health_checker.rs  mod.rs  rate_limiter.rs
apps/contracts/: Move.toml  windfall.key.pub
apps/contracts/scripts/: deploy.move  governance_operations.move  share_operations.move  trade_operations.move
apps/contracts/sources/: asset.move  governance.move  position.move  registry.move
apps/contracts/sources/internal/: security.move  storage.move  types.move
apps/contracts/tests/: governance_tests.move  position_tests.move  registry_tests.move
apps/frontend/: app.tsx  package.json
apps/frontend/app/: page.tsx
apps/frontend/components/create-fund/: index.tsx
apps/frontend/components/dashboard/: index.tsx  performance-graph.tsx
apps/frontend/components/fund-management/: index.tsx  ownership-fractions.tsx
apps/frontend/components/governance/: create-proposal.tsx  index.tsx
apps/frontend/components/join-fund/: index.tsx
apps/frontend/components/position-detail/: index.tsx
apps/frontend/components/wallet/: connect-wallet.tsx  wallet-option.tsx
apps/frontend/hooks/: useChat.ts  useCreateProposal.ts  usePositionValue.ts  usePositions.ts  useProposals.ts  useWalletBalance.ts
apps/frontend/types/: index.ts
tests/: Cargo.toml  helpers.rs  mod.rs
tests/api/: account_test.rs  assets.rs  funds.rs  investments.rs  mod.rs  proposals.rs
tests/integration/: mod.rs
tests/unit/: client.rs  db.rs  mod.rs  models.rs
tests/utils/: health_checker_test.rs  mod.rs  rate_limiter_test.rs
