[workspace]
members = [
    "apps/backend",
    "tests"
]
resolver = "2"

[workspace.dependencies]
backend = { path = "apps/backend" }
actix-web = "4.4.0"
actix-rt = "2.9"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.24.2", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
mockall = "0.11"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
zeroize = "1.3.0"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" } 