[package]
name = "backend-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
backend = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
mockall = { workspace = true }
aptos-sdk = { workspace = true }
zeroize = { workspace = true }

[[test]]
name = "integration"
path = "mod.rs" 