[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
aptos-sdk = { workspace = true }
hex = "0.4"
url = "2.4"
thiserror = "1.0"

[dev-dependencies]
mockall = { workspace = true }
actix-rt = { workspace = true }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
